--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
     <main>
         <section class="hero">
             <div class="hero-bg">
-                <img src="assets/images/hero.png" alt="至高のラーメン" class="hero-image">
+                <img src="hero.png" alt="至高のラーメン" class="hero-image">
                 <div class="overlay"></div>
             </div>
             <div class="hero-content">
@@ -103,7 +103,8 @@
                 <div class="join-content">
                     <h3 class="section-title">Join Us</h3>
                     <p class="join-text">あなたのラーメンライフを、もっと濃く、熱く。</p>
-                    <form class="join-form" onsubmit="event.preventDefault(); alert('登録申請を受け付けました！メールをご確認ください。');">
+                    <form class="join-form"
+                        onsubmit="event.preventDefault(); alert('登録申請を受け付けました！メールをご確認ください。');">
                         <input type="email" placeholder="メールアドレスを入力" required>
                         <button type="submit" class="btn-large">無料で参加する</button>
                     </form>
